github.com/qiniu/audio: support mp3

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.mp3
+*.wav
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -13,3 +16,4 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+adpcm-go/
