--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ go:
   - "1.13"
   - "1.14"
 install:
-  - sudo apt install libasound2-dev
+  - sudo apt-get install libasound2-dev
   - go install -v ./...
   - go test ./...
