--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ go:
 install:
   - sudo apt-get install libasound2-dev
   - go install -v ./...
-  - go test ./...
+  - go test -race -coverprofile=coverage.txt -covermode=atomic ./...
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
